# python-project-52

./: .env.example  .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml
task_manager/: forms.py  settings.py  urls.py  views.py
task_manager/labels/: apps.py  forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_executor_alter_task_status.py  0003_remove_task_labels_task_labels.py  0004_alter_task_labels.py
task_manager/templates/: index.html  layout.html  login.html
task_manager/templates/labels/: labels_create.html  labels_delete.html  labels_index.html  labels_update.html
task_manager/templates/statuses/: statuses_create.html  statuses_delete.html  statuses_index.html  statuses_update.html
task_manager/templates/tasks/: tasks_create.html  tasks_delete.html  tasks_detail.html  tasks_index.html  tasks_update.html
task_manager/templates/users/: user_create.html  user_delete.html  user_update.html  users_index.html
task_manager/users/: forms.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py  0002_delete_user.py
