[project]
name = "hexlet-code"
version = "0.1.0"
description = "package to easy create and deploy ur web app"
authors = [{name = "Alsy", email="velsych@mail.ru"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=6.0",
    "django-bootstrap5>=25.3",
    "django-filter>=25.2",
    "dotenv>=0.9.9",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.11",
    "ruff>=0.14.10",
    "uvicorn>=0.40.0",
    "whitenoise>=6.11.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["task_manager"]